# rust-trainee

./: .gitignore
actix-web-test/: Cargo.toml  wasm.wasm
actix-web-test/src/: main.rs  utilities.rs  xml.rs
async_test/async_test/: Cargo.toml
async_test/async_test/src/: main.rs
async_test/wasm/src/: main.rs
calculator/app/: Cargo.toml
calculator/app/src/: calculator.rs  main.rs  operations.rs
calculator/operations/add/src/: lib.rs
calculator/src/: calculator.rs  main.rs  operations.rs
doublylinked_list/: Cargo.toml
doublylinked_list/src/: main.rs
doublylinked_list_v2/: Cargo.toml
doublylinked_list_v2/src/: main.rs
equation/: Cargo.toml
equation/src/: biquadratic.rs  main.rs  polynomial.rs  quadratic.rs
hello_world/src/: main.rs
oauth-server/: .env  Cargo.toml  config.yaml
oauth-server/migrations/2023-02-25-204731_users/: up.sql
oauth-server/src/: dbcontroller.rs  main.rs  models.rs  oauth.rs  oauth_models.rs
symbol_count/src/: main.rs
wasm/: Cargo.toml
wasm/calculator/: Cargo.toml
wasm/calculator/src/: calculator.rs
wasm/counters/: Cargo.toml
wasm/counters/src/: counters.rs
wasm/src/: main.rs
wasm/wasm_util/: Cargo.toml
wasm/wasm_util/src/: lib.rs
wasm_calc/: Cargo.toml
wasm_calc/src/: main.rs
