[package]
name = "actix-web-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-xml = "0.2.0"
actix-files = "0.6.2"
anyhow = "1.0.69"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
serde_qs = "0.12.0"
tokio = "1.25.0"
serde-xml-rs = "0.6.0"
mime = "0.3.16"
wasmtime = "6.0.0"
wasmtime-wasi = "6.0.0"
#wasmer = "3.1.1"
#wasmer-wasi = "3.1.1"
walkdir = "2.3.2"