[package]
name = "oauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version ="1.0.152", features=["derive"]}
actix-web = "4.3.0"
diesel = {version = "2.0.3", features = ["postgres"]}
dotenv = "0.15.0"
mime = "0.3.16"
reqwest = "0.11.14"
openidconnect = "2.5.0"